--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ django-elasticsearch-dsl==7.1.1
 django_q==1.3.9
 django_redis==5.2.0
 psycopg2==2.9.3
-psycopg2==2.9.3
 dj-database-url==0.5.0
 gunicorn
+transformers==4.21.2
+numpy==1.21.6
+pandas==1.3.5
+torch==1.13.1
