--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for nlppp on 2023-07-31T01:55:06+08:00
+# fly.toml app configuration file generated for nlppp on 2023-08-01T11:30:33+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -12,6 +12,7 @@ console_command = "/code/manage.py shell"
 
 [env]
   PORT = "8000"
+  DJANGO_SECRET_KEY = "django-insecure--w297pf9z!be1kh3&+-$wdsqss##3_i2twg29^ebbt=f3*49*@"
 
 [http_service]
   internal_port = 8000
@@ -19,8 +20,14 @@ console_command = "/code/manage.py shell"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ["web"]
 
 [[statics]]
   guest_path = "/code/static"
   url_prefix = "/static/"
+
+[vm]
+  size = "dedicated-cpu-4x"
+
+[processes]
+  web = "python manage.py runserver 0.0.0.0:$PORT"
